Dummy_Package_for_scratch_org/main/default/objects/Compliance_Finding__c/Compliance_Finding__c.object-meta.xml
<CustomObject>
    <description>This object stores the individual findings of a Compliance Scan.  It is a junction object between the Compliance Scan and the Compliance Rule for which the findings have been found.</description>
    <label>Compliance Finding</label>
    <nameField>
        <displayFormat>CF-{000000000}</displayFormat>
        <label>Compliance Finding Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>