Dummy_Package_for_scratch_org/main/default/objects/Compliance_Finding__c/fields/Compliance_Rule__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rule__c</fullName>
    <label>Compliance Rule</label>
    <referenceTo>Compliance_Rule__c</referenceTo>
    <relationshipLabel>Compliance Findings</relationshipLabel>
    <relationshipName>Compliance_Incidences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>