Dummy_Package_for_scratch_org/main/default/objects/Compliance_Finding__c/fields/Compliance_Scan_Result__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Scan_Result__c</fullName>
    <label>Compliance Scan Result</label>
    <referenceTo>Compliance_Scan_Result__c</referenceTo>
    <relationshipLabel>Compliance Findings</relationshipLabel>
    <relationshipName>Compliance_Findings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>