Dummy_Package_for_scratch_org/main/default/objects/Compliance_Finding__c/fields/Rule_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Rule_Error_Message__c</fullName>
    <description>This field is populated with error message from its Compliance Rule Error Message</description>
    <label>Rule Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>