Dummy_Package_for_scratch_org/main/default/objects/Compliance_Finding__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <formula>TEXT(Compliance_Rule__r.Severity__c)</formula>
    <inlineHelpText>The severity of the Rule that has been violated</inlineHelpText>
    <label>Rule Severity</label>
    <type>Text</type>
</CustomField>