Dummy_Package_for_scratch_org/main/default/objects/Compliance_Finding__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Use this record type to capture non-Salesforce scan findings.</description>
    <label>Other</label>
</RecordType>