Dummy_Package_for_scratch_org/main/default/objects/Compliance_Finding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compliance_Rule__c</columns>
    <columns>Compliance_Scan_Result__c</columns>
    <columns>Severity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>